--- a/style/header.css
+++ b/style/header.css
@@ -71,7 +71,7 @@ header{
 }
 
 
-@media only screen and (min-width: 320px) and  (max-width: 479px){
+@media only screen and (min-width: 290px) and  (max-width: 650px){
 
 header{
     width: 100%;
@@ -216,36 +216,9 @@ header{
 
 }
 
-
 /* For Laptop */
 
-@media only screen and (min-width: 480px) and  (max-width: 1080px){
-    :root{
-        /* --h2-font-size : clamp(9px,1.7vw,28px);
-        --h3-font-size : clamp(6px,1.1vw,14px);
-        --p-font-size : clamp(7px,1.1vw,16px);
-        --summary-font-size : clamp(5px,1.0vw,14px);
-        --header-nav-font-size : var(--h3-font-size);
-        --d8-address-font-size : clamp(4px,1.0vw,12px); */
-
-        --h2-font-size : clamp(20px, 4vw,28px);
-        --h3-font-size : clamp(14px,2.5vw,16px);
-        --p-font-size : clamp(12px,2.5vw,16px);
-        /* --p-font-size : 1.1rem; */
-        --summary-font-size : clamp(12px,2.5vw,16px);
-        --header-nav-font-size : var(--h3-font-size);
-        /* --d8-address-font-size : clamp(5px,1.2vw,12px); */
-        /* --d8-address-font-size : 0.75rem; */
-        --d8-address-font-size : 0.8rem;
-        --div7-grid-feature-title-font-size : 1.3rem;
-        --div7-grid-feature-desc-font-size : 0.8rem;
-        --div7-grid-feature-list-font-size : 0.8rem;
-
-    }
-    
-    .content{
-        width: 90%;
-    }
+@media only screen and (min-width: 650px) and  (max-width: 1080px){
 
     .header{
         width: 90%;
@@ -255,75 +228,4 @@ header{
         width: 20vw;
         height: 8vw;
     }
-
-    .btn-submit{
-        font-size: var(--h3-font-size);
-        padding: 0.7vw 0.8vw;
-    }
-    
-    .div2-img{
-        width: 30vw;
-        height: 30vw;
-    }
-
-    .div5-grid-feature-img{
-        width: 22vw;
-        height: 15vw;
-    }
-
-    .div6{
-        margin: 1vw 0;
-    }
-
-    .div6 p{
-        width: 30vw;
-    }
-
-    .div7 h2, .div7 p{
-        width: 90%;
-    }
-
 }
-
-@media only screen and (min-width: 480px) and  (max-width: 768px){
-
-    form{
-        width: 100%;
-    }
-    
-    form textarea{
-        height:100px;
-        min-height:100px;
-    }
-
-    form input[type=text], textarea{
-        border-radius: 0.7vw;
-    } 
-    
-
-    .div4-grid{
-        column-gap: 2vw;
-        row-gap: 2vw;
-        grid-template-columns: 1fr 1fr;
-    }
-    
-    .div5-grid{
-        column-gap: 2vw;
-        row-gap: 2vw;
-        grid-template-columns: 1fr 1fr;
-        padding: 0 0;
-    }
-
-    .div5-grid-feature-img{
-        width: 100%;
-        height: 24vw;
-    }
-    
-    .div7-grid{
-        grid-template-columns: 1fr 1fr;
-        column-gap: 2vw;
-        row-gap: 2vw;
-    
-    }
-}
-
